Fix header bar overlap

--- a/source/main_page/main.css
+++ b/source/main_page/main.css
@@ -32,6 +32,11 @@ body{
     font-weight: 400;
 }
 
+#chore-cards{
+    position: fixed;
+    top: 70px;
+}
+
 /* styling for drop down button*/
 .dropdown-box {
     display: none;
